Be XML Namespace 1.0 compliante (patch for DV, Mdk bug #6332).
2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>

        * stylesheets/yelp-custom.xsl:
        Be XML Namespace 1.0 compliante (patch for DV, Mdk bug #6332).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
+	* stylesheets/yelp-custom.xsl:
+	Be XML Namespace 1.0 compliante (patch for DV, Mdk bug #6332).
+
+2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
 	* stylesheets/yelp-customization.xsl:
 	Don't generate temporary file for gnumeric help (Mdk bug #6341).
 	Fix from Shaun.
