--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-31  Žygimantas Beručka  <uid0@tuxfamily.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2004-01-30  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
