--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-31 Mətin Əmirov <metin@karegen.com>
+
+	* az.po: Updated Azerbaijani Translation.
+
 2004-01-31  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* lt.po: Updated Lithuanian translation.
