--- a/po/az.po
+++ b/po/az.po
@@ -1,64 +1,60 @@
+# translation of yelp.HEAD.po to Azerbaijani Turkish
 # yelp faylının Azərbaycan dilinə tərcüməsi.
-# Copyright (C) 2003 Free Software Foundation, Inc.
-# Mətin Əmirov <metin@karegen.com>, 2003.
+# Copyright (C) 2003, 2004 Free Software Foundation, Inc.
+# Mətin Əmirov <metin@karegen.com>, 2003, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.4\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-08-27 13:43+0200\n"
+"Project-Id-Version: yelp.HEAD\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-31 04:36+0100\n"
+"PO-Revision-Date: 2004-01-31 20:12+0200\n"
 "Last-Translator: Mətin Əmirov <metin@karegen.com>\n"
-"Language-Team: Azerbaijani <gnome@azitt.com>\n"
+"Language-Team: Azerbaijani Turkish <gnome@azitt.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Tə'minatlar"
+msgstr "Appletlər"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "Tə'minatlar"
+msgstr "Proqramlar"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Masa Üstü"
+msgstr "Masa Üstü"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "İnkişaf"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "İnkişaf"
+msgstr "İnkişaf Mühitləri"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "İnkişaf"
+msgstr "İnkişaf Vasitələri"
 
-#: data/toc.xml.in.h:7
-#, fuzzy
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
 msgid "Editors"
-msgstr "/_Düzəlt"
+msgstr "Editorlar"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Tə'minatlar"
+msgstr "Təhsil Proqramları"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Oyunlar və Əyləncə"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Ümumi"
 
 #  GList           *seriesids;
 #: data/toc.xml.in.h:11
@@ -66,50 +62,44 @@ msgid "Help Contents"
 msgstr "Yardım Məzmunu"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Tə'minatlar"
+msgstr "İnternet Proqramları"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Çəyirdək Qaydaları"
+msgstr "Çəyirdəklər"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Tə'minatlar"
+msgstr "Multimediya Proqramları"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Offis və İş Proqramları"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Tə'minatlar"
+msgstr "Elmi Proqramlar"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Təhlükəsizlik"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Sistem Çağırışları"
+msgstr "Sistem"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Vasitələr"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Tə'minatlar"
+msgstr "X Proqramları"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,27 +107,27 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Böyük/kiçik hərfə _həssas"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Axtar"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Axtar: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "_Sonrakı"
+msgstr "_Növbəti"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr "_Əvvəlki"
+msgstr "Ə_vvəlki"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Birbaşa bük"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -147,54 +137,52 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp E'malatxanası"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "yelp:document üstündə href attributu tapılmadı"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Yaddaş çatışmır"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Başlıq səhifəsi"
 
 #  GList           *seriesids;
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
+#: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Məzmun"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Namə'lum"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "'%s' adlı sənəd mövcud deyil"
+msgstr "Seçili sənəd açıla bilmədi"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "'%s' adlı sənəd mövcud deyil"
+msgstr "Seçili səhifə bu sənəddə tapıla bilmədi."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "'%s' adlı sənəd mövcud deyil"
+msgstr "Məzmun oxuna bilmədi."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML sənədləri artıq dəstəklənmir."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "'%s' adlı sənəd mövcud deyil"
+msgstr "Seçili fayl oxuna bilmədi."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr "İstifadə ediləcək ön yaddaş cərgəsini tə'yin edin"
+msgstr "İstifadə ediləcək ön yaddaş cərgəsini seç"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -252,7 +240,7 @@ msgstr "Avadanlıq"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "Quraşdırma Faylları"
+msgstr "Qurğu Faylları"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -267,135 +255,132 @@ msgid "System Administration"
 msgstr "Sistem İdarəsi"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Sənədlər"
+msgstr "Sənəd URI-si"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "İşlənəcək sənədin URI-si"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Fasilə məzmunu mənfidir."
 
-#: src/yelp-toc-pager.c:880
+#: src/yelp-toc-pager.c:486
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "'%s' OMF faylı uüklənə bilməsi."
+
+#: src/yelp-toc-pager.c:892
 msgid "Categories"
 msgstr "Kateqoriyalar"
 
-#: src/yelp-toc-pager.c:894
+#: src/yelp-toc-pager.c:906
 msgid "Documents"
 msgstr "Sənədlər"
 
-#: src/yelp-window.c:229
+#: src/yelp-window.c:231
 msgid "/_File"
 msgstr "/_Fayl"
 
-#: src/yelp-window.c:230
+#: src/yelp-window.c:232
 msgid "/File/_New window"
 msgstr "/Fayl/_Yeni pəncərə"
 
-#: src/yelp-window.c:233
+#: src/yelp-window.c:235
 msgid "/File/_Close window"
 msgstr "/Fayl/Pəncərəni _bağla"
 
-#: src/yelp-window.c:237
+#: src/yelp-window.c:239
 msgid "/_Edit"
 msgstr "/_Düzəlt"
 
-#: src/yelp-window.c:238
-#, fuzzy
+#: src/yelp-window.c:240
 msgid "/Edit/_Find..."
-msgstr "/Düzəlt/_Səhifədə tap..."
+msgstr "/Düzəlt/_Axtar..."
 
-#: src/yelp-window.c:241
-#, fuzzy
+#: src/yelp-window.c:243
 msgid "/Edit/Find Ne_xt"
-msgstr "/Düzəlt/_Yenidən tap"
+msgstr "/Düzəlt/_Sonrakını Axtar"
 
-#: src/yelp-window.c:244
-#, fuzzy
+#: src/yelp-window.c:246
 msgid "/Edit/Find Pre_vious"
-msgstr "/Düzəlt/_Yenidən tap"
+msgstr "/Düzəlt/Ə_vvəlkini Axtar"
 
-#: src/yelp-window.c:248
+#: src/yelp-window.c:250
 msgid "/_Go"
 msgstr "/_Get"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:251
 msgid "/Go/_Back"
 msgstr "/Get/_Geri"
 
-#: src/yelp-window.c:252
+#: src/yelp-window.c:254
 msgid "/Go/_Forward"
 msgstr "/Get/_İrəli"
 
-#: src/yelp-window.c:255
+#: src/yelp-window.c:257
 msgid "/Go/_Home"
 msgstr "/Get/_Ev"
 
-#: src/yelp-window.c:258
-#, fuzzy
+#: src/yelp-window.c:260
 msgid "/Go/"
-msgstr "/_Get"
+msgstr "/Get/"
 
-#: src/yelp-window.c:259
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Previous Page"
-msgstr "_Əvvəlki"
+msgstr "/Get/Ə_vvəlki Səhifə"
 
-#: src/yelp-window.c:262
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Next Page"
-msgstr "/Get/_Məzmun"
+msgstr "/Get/_Sonrakı Səhifə"
 
 #  GList           *seriesids;
-#: src/yelp-window.c:265
-#, fuzzy
+#: src/yelp-window.c:267
 msgid "/Go/_Contents"
-msgstr "Məzmun"
+msgstr "/Get/_Məzmun"
 
-#: src/yelp-window.c:269
+#: src/yelp-window.c:271
 msgid "/_Help"
 msgstr "/_Yardım"
 
-#: src/yelp-window.c:270
+#: src/yelp-window.c:272
 msgid "/Help/_About"
 msgstr "/Yardım/_Haqqında"
 
-#: src/yelp-window.c:332
+#: src/yelp-window.c:334
 msgid "Help Browser"
 msgstr "Yardım Səyyahı"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:552 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "Qisim"
 
-#: src/yelp-window.c:603
+#: src/yelp-window.c:609
 msgid "Back"
 msgstr "Geri"
 
-#: src/yelp-window.c:604
+#: src/yelp-window.c:610
 msgid "Show previous page in history"
 msgstr "Keçmişdəki əvvəlki səhifəni göstər"
 
-#: src/yelp-window.c:614
+#: src/yelp-window.c:620
 msgid "Forward"
 msgstr "İrəli"
 
-#: src/yelp-window.c:615
+#: src/yelp-window.c:621
 msgid "Show next page in history"
 msgstr "Keçmişdəki növbəti səhifəni göstər"
 
-#: src/yelp-window.c:627
+#: src/yelp-window.c:633
 msgid "Home"
 msgstr "Ev"
 
-#: src/yelp-window.c:628
+#: src/yelp-window.c:634
 msgid "Go to home view"
 msgstr "Ev görünüşünə get"
 
-#: src/yelp-window.c:834
+#: src/yelp-window.c:844
 msgid "Loading..."
 msgstr "Yüklənir..."
 
@@ -403,330 +388,285 @@ msgstr "Yüklənir..."
 #  * will shop up in the "about" box
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1228
+#: src/yelp-window.c:1267
 msgid "translator_credits"
 msgstr ""
 "Vasif İsmailoğlu <linuxaz@azerimail.net>\n"
-"Mətin Əmirov <metin@karegen.com>"
+"Mətin Əmirov <metin@karegen.com>\n"
+"\n"
+"Tərcümə dəstəsinə qoşulmaq üçün\n"
+"i18n@azitt.com ünvanı ilə laqə qurun."
 
-#: src/yelp-window.c:1233
+#: src/yelp-window.c:1272
 msgid "A Help Browser for GNOME"
-msgstr "GNOME üçün Yardım Səyyahı"
+msgstr "GNOME Üçün Yardım Səyyahı"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-msgid "About This Bibliography"
-msgstr ""
+msgid "About This Article"
+msgstr "Bu Məqalə Haqqında"
 
 #: stylesheets/l10n.xml.in.h:6
-#, fuzzy
-msgid "About This Book"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Bibliography"
+msgstr "Bu Biblioqrafiya Haqqında"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
-msgid "About This Chapter"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Book"
+msgstr "Bu Kitab Haqqında"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
-msgid "About This Entry"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Chapter"
+msgstr "Bu Fəsil Haqqında"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
-msgid "About This Glossary"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Entry"
+msgstr "Bu Giriş Haqqında"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
-msgid "About This Index"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Glossary"
+msgstr "Bu Lüğət Haqqında"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
-msgid "About This Part"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Index"
+msgstr "Bu Məzmun Haqqında"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
-msgid "About This Preface"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Part"
+msgstr "Bu Qisim Haqqında"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
-msgid "About This Reference"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Preface"
+msgstr "Bu Giriş Haqqında"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
-msgid "About This Section"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Reference"
+msgstr "Bu Bələdçi Haqqında"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
-msgid "About This Set"
-msgstr "Bu Sənəd Haqqında"
+msgid "About This Section"
+msgstr "Bu Bölmə Haqqında"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
-msgid "Affiliation"
-msgstr "Tə'minatlar"
+msgid "About This Set"
+msgstr "Bu Dəstə Haqqında"
 
 #: stylesheets/l10n.xml.in.h:17
-msgid "Appendix"
-msgstr ""
+msgid "Affiliation"
+msgstr "Bağlılıq"
 
 #: stylesheets/l10n.xml.in.h:18
-msgid "Article"
-msgstr ""
+msgid "Appendix"
+msgstr "Əlavə"
 
 #: stylesheets/l10n.xml.in.h:19
-msgid "Audience"
-msgstr ""
+msgid "Article"
+msgstr "Məqalə"
 
 #: stylesheets/l10n.xml.in.h:20
-msgid "Author"
-msgstr ""
+msgid "Audience"
+msgstr "Audiyensiya"
 
 #: stylesheets/l10n.xml.in.h:21
-msgid "Bibliography"
-msgstr ""
+msgid "Author"
+msgstr "Müəllif"
 
 #: stylesheets/l10n.xml.in.h:22
-msgid "Book"
-msgstr ""
+msgid "Authors"
+msgstr "Müəlliflər"
 
 #: stylesheets/l10n.xml.in.h:23
-msgid "Caution"
-msgstr ""
+msgid "Bibliography"
+msgstr "Biblioqrafiya"
 
 #: stylesheets/l10n.xml.in.h:24
-msgid "Chapter"
-msgstr ""
+msgid "Book"
+msgstr "Kitab"
 
 #: stylesheets/l10n.xml.in.h:25
-msgid "Collaborator"
-msgstr ""
+msgid "Caution"
+msgstr "Diqqət"
 
 #: stylesheets/l10n.xml.in.h:26
-msgid "Colophon"
-msgstr ""
+msgid "Chapter"
+msgstr "Fəsil"
+
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborator"
+msgstr "İkinci Müəllif"
 
 #: stylesheets/l10n.xml.in.h:28
-msgid "Copyright"
-msgstr ""
+msgid "Collaborators"
+msgstr "Digər Müəlliflər"
 
 #: stylesheets/l10n.xml.in.h:29
-msgid "Date"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:30
-#, fuzzy
-msgid "Dedication"
-msgstr "Qisim"
+msgid "Colophon"
+msgstr "Kolofon"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
-msgid "Editor"
-msgstr "/_Düzəlt"
+msgid "Copyright"
+msgstr "Müəllif Hüququ"
 
 #: stylesheets/l10n.xml.in.h:32
-msgid "Email"
-msgstr ""
+msgid "Copyrights"
+msgstr "Müəllif Hüququ"
 
 #: stylesheets/l10n.xml.in.h:33
-msgid "Example"
-msgstr ""
+msgid "Date"
+msgstr "Tarix"
 
 #: stylesheets/l10n.xml.in.h:34
-msgid "Figure"
-msgstr ""
+msgid "Dedication"
+msgstr "Həsr"
 
 #: stylesheets/l10n.xml.in.h:35
-msgid "Glossary"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:36
-msgid "Important"
-msgstr ""
+msgid "Editor"
+msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:37
+msgid "Email"
+msgstr "Epoçt"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Example"
+msgstr "Nümunə"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Figure"
+msgstr "Fiqur"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Glossary"
+msgstr "Lüğət"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Important"
+msgstr "Vacib"
+
+#: stylesheets/l10n.xml.in.h:42
 msgid "Index"
 msgstr "Məzmun"
 
-#: stylesheets/l10n.xml.in.h:38
-msgid "Legal Notice"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Message Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Message Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Message Origin"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
+msgid "Legal Notice"
+msgstr "Rəsmi Qeyd"
 
 #: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
+msgid "Level"
+msgstr "Səviyyə"
 
 #: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
+msgid "Message Audience"
+msgstr "İsmarış Audiyensiyası"
 
 #: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
+msgid "Message Level"
+msgstr "İsmarış Səviyyəsi"
 
 #: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
+msgid "Message Origin"
+msgstr "İsmarış Mənbəsi"
 
 #: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
+msgid "Note"
+msgstr "Qeyd"
 
 #: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
+msgid "Origin"
+msgstr "Mənbə"
 
 #: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
+msgid "Other Contributor"
+msgstr "Digər Köməkçi"
 
 #: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
+msgid "Other Contributors"
+msgstr "Digər Köməkçilər"
 
 #: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
+msgid "Part"
+msgstr "Hissə"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Preface"
+msgstr "Giriş"
 
 #: stylesheets/l10n.xml.in.h:54
-msgid "See"
-msgstr ""
+msgid "Publisher"
+msgstr "Nəşriyyatçı"
 
 #: stylesheets/l10n.xml.in.h:55
-msgid "See Also"
-msgstr ""
+msgid "Publishers"
+msgstr "Nəşriyyatçılar"
 
 #: stylesheets/l10n.xml.in.h:56
-#, fuzzy
-msgid "Set Index"
-msgstr "Məzmun"
+msgid "Reference"
+msgstr "Bələdçi"
 
 #: stylesheets/l10n.xml.in.h:57
-msgid "Table"
-msgstr ""
+msgid "Reference Entry"
+msgstr "Bələdçi Boşdur"
 
-#  GList           *seriesids;
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
-msgid "Table of Contents"
-msgstr "Yardım Məzmunu"
+msgid "Reference Section"
+msgstr "Bələdçi Qismi"
 
 #: stylesheets/l10n.xml.in.h:59
-msgid "Tip"
-msgstr ""
+msgid "Revision History"
+msgstr "Reviziya Keçmişi"
 
-#: stylesheets/l10n.xml.in.h:60
-msgid "Title"
-msgstr ""
+#: stylesheets/l10n.xml.in.h:61
+msgid "See"
+msgstr "Baxın"
 
 #: stylesheets/l10n.xml.in.h:62
+msgid "See Also"
+msgstr "Əlaqəli Olaraq Baxın"
+
+#: stylesheets/l10n.xml.in.h:63
+msgid "Set Index"
+msgstr "Məzmunu Seç"
+
+#: stylesheets/l10n.xml.in.h:64
+msgid "Table"
+msgstr "Cədvəl"
+
+#  GList           *seriesids;
+#: stylesheets/l10n.xml.in.h:65
+msgid "Table of Contents"
+msgstr "Məzmun"
+
+#: stylesheets/l10n.xml.in.h:66
+msgid "Tip"
+msgstr "Məsləhət"
+
+#: stylesheets/l10n.xml.in.h:67
+msgid "Title"
+msgstr "Başlıq"
+
+#: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Xəbərdarlıq"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME haqqında yardım al"
+msgstr "GNOME haqqında yardım alın"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Yardım"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "'%s' adlı sənəd mövcud deyil"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Sənəddə mətni tap:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "_Avtomatik bük"
-
-#~ msgid "Find text..."
-#~ msgstr "Mətni tap..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Bütün _sözə uyğun"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Böyük/kiçik hərflərə _uyğun"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Axtar:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Masa Üstü"
-
-#~ msgid "Additional documents"
-#~ msgstr "Əlavə sənədlər"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Əl Kitabları"
-
-#~ msgid "Info Pages"
-#~ msgstr "Mə'lumat Səhifələri"
-
-#~ msgid "Manual pages"
-#~ msgstr "Əl kitabları"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME"
-
-#~ msgid "Free Software"
-#~ msgstr "Sərbəst Tə'minat"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Yüklənir..."
-
-#~ msgid "Previous"
-#~ msgstr "Əvvəlki"
-
-#~ msgid "Next"
-#~ msgstr "Sonrakı"
-
-#~ msgid "Search in the index"
-#~ msgstr "Məzmunda axtar"
