--- a/po/da.po
+++ b/po/da.po
@@ -1,23 +1,22 @@
 # Danish translation of Yelp.
-# Copyright (C) 2002, 03 Free Software Foundation, Inc.
-# Ole Laursen <olau@hardworking.dk>, 2002, 03.
+# Copyright (C) 2002, 03, 04 Free Software Foundation, Inc.
+# Ole Laursen <olau@hardworking.dk>, 2002, 03, 04.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-12-27 19:39+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-01 21:03+0100\n"
+"PO-Revision-Date: 2004-02-01 21:03+0100\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Programmer"
+msgstr "Panelprogrammer"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -39,7 +38,7 @@ msgstr "Udviklingsmiljøer"
 msgid "Development Tools"
 msgstr "Udviklingsværktøjer"
 
-#: data/toc.xml.in.h:7
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
 msgid "Editors"
 msgstr "Redigeringsprogrammer"
 
@@ -135,35 +134,35 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-fabrik"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr "Ingen 'href'-egenskab fundet i 'yelp:document'"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
 msgstr "Løbet tør for hukommelse"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Titelside"
 
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
+#: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Indhold"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
 msgstr "Ukendt"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Kunne ikke åbne dokumentet '%s'"
+msgstr "Kunne ikke åbne det valgte dokument"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Siden '%s' blev ikke fundet i dette dokument."
+msgstr "Den valgte side blev ikke fundet i dette dokument."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -174,9 +173,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "DocBook SGML-dokumenter understøttes ikke længere."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Kunne ikke læse indholdsfortegnelsen."
+msgstr "Kunne ikke åbne den valgte fil."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -264,382 +262,392 @@ msgstr "URI'en for det dokument der skal behandles"
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Pausetal er negativt."
 
-#: src/yelp-toc-pager.c:880
+#: src/yelp-toc-pager.c:486
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Kunne ikke indlæse OMF-filen \"%s\"."
+
+#: src/yelp-toc-pager.c:892
 msgid "Categories"
 msgstr "Kategorier"
 
-#: src/yelp-toc-pager.c:894
+#: src/yelp-toc-pager.c:906
 msgid "Documents"
 msgstr "Dokumenter"
 
-#: src/yelp-window.c:229
+#: src/yelp-window.c:231
 msgid "/_File"
 msgstr "/_Fil"
 
-#: src/yelp-window.c:230
+#: src/yelp-window.c:232
 msgid "/File/_New window"
 msgstr "/Fil/_Nyt vindue"
 
-#: src/yelp-window.c:233
+#: src/yelp-window.c:235
 msgid "/File/_Close window"
 msgstr "/Fil/_Luk vindue"
 
-#: src/yelp-window.c:237
+#: src/yelp-window.c:239
 msgid "/_Edit"
 msgstr "/_Redigér"
 
-#: src/yelp-window.c:238
+#: src/yelp-window.c:240
 msgid "/Edit/_Find..."
 msgstr "/Redigér/_Find..."
 
-#: src/yelp-window.c:241
+#: src/yelp-window.c:243
 msgid "/Edit/Find Ne_xt"
 msgstr "/Redigér/Find _næste"
 
-#: src/yelp-window.c:244
+#: src/yelp-window.c:246
 msgid "/Edit/Find Pre_vious"
 msgstr "/Redigér/Find _forrige"
 
-#: src/yelp-window.c:248
+#: src/yelp-window.c:250
 msgid "/_Go"
 msgstr "/_Navigering"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:251
 msgid "/Go/_Back"
 msgstr "/Navigering/_Tilbage"
 
-#: src/yelp-window.c:252
+#: src/yelp-window.c:254
 msgid "/Go/_Forward"
 msgstr "/Navigering/_Fremad"
 
-#: src/yelp-window.c:255
+#: src/yelp-window.c:257
 msgid "/Go/_Home"
 msgstr "/Navigering/_Startside"
 
-#: src/yelp-window.c:258
+#: src/yelp-window.c:260
 msgid "/Go/"
 msgstr "/_Navigering"
 
-#: src/yelp-window.c:259
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Previous Page"
-msgstr "/Navigering/_Forrige"
+msgstr "/Navigering/_Forrige side"
 
-#: src/yelp-window.c:262
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Next Page"
-msgstr "/Navigering/_Næste"
+msgstr "/Navigering/_Næste side"
 
-#: src/yelp-window.c:265
+#: src/yelp-window.c:267
 msgid "/Go/_Contents"
 msgstr "/Navigering/_Indhold"
 
-#: src/yelp-window.c:269
+#: src/yelp-window.c:271
 msgid "/_Help"
 msgstr "/_Hjælp"
 
-#: src/yelp-window.c:270
+#: src/yelp-window.c:272
 msgid "/Help/_About"
 msgstr "/Hjælp/_Om"
 
-#: src/yelp-window.c:332
+#: src/yelp-window.c:334
 msgid "Help Browser"
 msgstr "Hjælpelæser"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:552 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "Sektion"
 
-#: src/yelp-window.c:603
+#: src/yelp-window.c:609
 msgid "Back"
 msgstr "Tilbage"
 
-#: src/yelp-window.c:604
+#: src/yelp-window.c:610
 msgid "Show previous page in history"
 msgstr "Vis foregående side i historikken"
 
-#: src/yelp-window.c:614
+#: src/yelp-window.c:620
 msgid "Forward"
 msgstr "Fremad"
 
-#: src/yelp-window.c:615
+#: src/yelp-window.c:621
 msgid "Show next page in history"
 msgstr "Vis næste side i historikken"
 
-#: src/yelp-window.c:627
+#: src/yelp-window.c:633
 msgid "Home"
 msgstr "Start"
 
-#: src/yelp-window.c:628
+#: src/yelp-window.c:634
 msgid "Go to home view"
 msgstr "Gå til startvisning"
 
-#: src/yelp-window.c:834
+#: src/yelp-window.c:844
 msgid "Loading..."
 msgstr "Indlæser..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1228
+#: src/yelp-window.c:1267
 msgid "translator_credits"
 msgstr "Ole Laursen <olau@hardworking.dk>"
 
-#: src/yelp-window.c:1233
+#: src/yelp-window.c:1272
 msgid "A Help Browser for GNOME"
 msgstr "En hjælpelæser til Gnome"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-msgid "About This Bibliography"
-msgstr ""
+msgid "About This Article"
+msgstr "Om denne artikel"
 
 #: stylesheets/l10n.xml.in.h:6
-#, fuzzy
-msgid "About This Book"
-msgstr "Om dette dokument"
+msgid "About This Bibliography"
+msgstr "Om denne litteraturliste"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
-msgid "About This Chapter"
-msgstr "Om dette dokument"
+msgid "About This Book"
+msgstr "Om denne bog"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
-msgid "About This Entry"
-msgstr "Om dette dokument"
+msgid "About This Chapter"
+msgstr "Om dette kapitel"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
-msgid "About This Glossary"
-msgstr "Om dette dokument"
+msgid "About This Entry"
+msgstr "Om dette element"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
-msgid "About This Index"
-msgstr "Om dette dokument"
+msgid "About This Glossary"
+msgstr "Om denne ordliste"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
-msgid "About This Part"
-msgstr "Om dette dokument"
+msgid "About This Index"
+msgstr "Om dette indeks"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
-msgid "About This Preface"
-msgstr "Om dette dokument"
+msgid "About This Part"
+msgstr "Om denne del"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
-msgid "About This Reference"
-msgstr "Om dette dokument"
+msgid "About This Preface"
+msgstr "Om dette forord"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
-msgid "About This Section"
-msgstr "Om dette dokument"
+msgid "About This Reference"
+msgstr "Om denne reference"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
-msgid "About This Set"
-msgstr "Om dette dokument"
+msgid "About This Section"
+msgstr "Om denne sektion"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
-msgid "Affiliation"
-msgstr "Programmer"
+msgid "About This Set"
+msgstr "Om dette sæt"
 
 #: stylesheets/l10n.xml.in.h:17
-msgid "Appendix"
-msgstr ""
+msgid "Affiliation"
+msgstr "Tilknytning"
 
 #: stylesheets/l10n.xml.in.h:18
-msgid "Article"
-msgstr ""
+msgid "Appendix"
+msgstr "Appendiks"
 
 #: stylesheets/l10n.xml.in.h:19
-msgid "Audience"
-msgstr ""
+msgid "Article"
+msgstr "Artikel"
 
 #: stylesheets/l10n.xml.in.h:20
-msgid "Author"
-msgstr ""
+msgid "Audience"
+msgstr "Publikum"
 
 #: stylesheets/l10n.xml.in.h:21
-msgid "Bibliography"
-msgstr ""
+msgid "Author"
+msgstr "Forfatter"
 
 #: stylesheets/l10n.xml.in.h:22
-msgid "Book"
-msgstr ""
+msgid "Authors"
+msgstr "Forfattere"
 
 #: stylesheets/l10n.xml.in.h:23
-msgid "Caution"
-msgstr ""
+msgid "Bibliography"
+msgstr "Litteraturliste"
 
 #: stylesheets/l10n.xml.in.h:24
-msgid "Chapter"
-msgstr ""
+msgid "Book"
+msgstr "Bog"
 
 #: stylesheets/l10n.xml.in.h:25
-msgid "Collaborator"
-msgstr ""
+msgid "Caution"
+msgstr "Advarsel"
 
 #: stylesheets/l10n.xml.in.h:26
-msgid "Colophon"
-msgstr ""
+msgid "Chapter"
+msgstr "Kapitel"
+
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborator"
+msgstr "Bidrager"
 
 #: stylesheets/l10n.xml.in.h:28
-msgid "Copyright"
-msgstr ""
+msgid "Collaborators"
+msgstr "Bidragere"
 
 #: stylesheets/l10n.xml.in.h:29
-msgid "Date"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:30
-#, fuzzy
-msgid "Dedication"
-msgstr "Sektion"
+msgid "Colophon"
+msgstr "Kolofon"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
-msgid "Editor"
-msgstr "Redigeringsprogrammer"
+msgid "Copyright"
+msgstr "Ophavsret"
 
 #: stylesheets/l10n.xml.in.h:32
-msgid "Email"
-msgstr ""
+msgid "Copyrights"
+msgstr "Ophavsret"
 
 #: stylesheets/l10n.xml.in.h:33
-msgid "Example"
-msgstr ""
+msgid "Date"
+msgstr "Dato"
 
 #: stylesheets/l10n.xml.in.h:34
-msgid "Figure"
-msgstr ""
+msgid "Dedication"
+msgstr "Dedikering"
 
 #: stylesheets/l10n.xml.in.h:35
-msgid "Glossary"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:36
-#, fuzzy
-msgid "Important"
-msgstr "Vigtige dokumenter"
+msgid "Editor"
+msgstr "Redigeringsprogram"
 
 #: stylesheets/l10n.xml.in.h:37
+msgid "Email"
+msgstr "Epost"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Example"
+msgstr "Eksempel"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Figure"
+msgstr "Figur"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Glossary"
+msgstr "Ordliste"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Important"
+msgstr "Vigtigt"
+
+#: stylesheets/l10n.xml.in.h:42
 msgid "Index"
 msgstr "Indeks"
 
-#: stylesheets/l10n.xml.in.h:38
-msgid "Legal Notice"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Message Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Message Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Message Origin"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
+msgid "Legal Notice"
+msgstr "Betingelser for brug"
 
 #: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
+msgid "Level"
+msgstr "Niveau"
 
 #: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
+msgid "Message Audience"
+msgstr "Budskabsmodtager"
 
 #: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
+msgid "Message Level"
+msgstr "Budskabsniveau"
 
 #: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
+msgid "Message Origin"
+msgstr "Budskabsophav"
 
 #: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
+msgid "Note"
+msgstr "Bemærk"
 
 #: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
+msgid "Origin"
+msgstr "Ophav"
 
 #: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
+msgid "Other Contributor"
+msgstr "Anden bidragyder"
 
 #: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
+msgid "Other Contributors"
+msgstr "Andre bidragyder"
 
 #: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
+msgid "Part"
+msgstr "Del"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Preface"
+msgstr "Forord"
 
 #: stylesheets/l10n.xml.in.h:54
-msgid "See"
-msgstr ""
+msgid "Publisher"
+msgstr "Forlag"
 
 #: stylesheets/l10n.xml.in.h:55
-msgid "See Also"
-msgstr ""
+msgid "Publishers"
+msgstr "Forlag"
 
 #: stylesheets/l10n.xml.in.h:56
-#, fuzzy
-msgid "Set Index"
-msgstr "Indeks"
+msgid "Reference"
+msgstr "Reference"
 
 #: stylesheets/l10n.xml.in.h:57
-msgid "Table"
-msgstr ""
+msgid "Reference Entry"
+msgstr "Referencepunkt"
 
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
-msgid "Table of Contents"
-msgstr "Indhold i hjælp"
+msgid "Reference Section"
+msgstr "Referencesektion"
 
 #: stylesheets/l10n.xml.in.h:59
-msgid "Tip"
-msgstr ""
+msgid "Revision History"
+msgstr "Reversionshistorik"
 
-#: stylesheets/l10n.xml.in.h:60
-#, fuzzy
-msgid "Title"
-msgstr "Titelside"
+#: stylesheets/l10n.xml.in.h:61
+msgid "See"
+msgstr "Se"
 
 #: stylesheets/l10n.xml.in.h:62
+msgid "See Also"
+msgstr "Se også"
+
+#: stylesheets/l10n.xml.in.h:63
+msgid "Set Index"
+msgstr "Sætindeks"
+
+#: stylesheets/l10n.xml.in.h:64
+msgid "Table"
+msgstr "Tabel"
+
+#: stylesheets/l10n.xml.in.h:65
+msgid "Table of Contents"
+msgstr "Indholdsfortegnelse"
+
+#: stylesheets/l10n.xml.in.h:66
+msgid "Tip"
+msgstr "Tip"
+
+#: stylesheets/l10n.xml.in.h:67
+msgid "Title"
+msgstr "Titel"
+
+#: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Advarsel"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -676,36 +684,6 @@ msgstr "Hjælp"
 #~ msgid "Additional documents"
 #~ msgstr "Yderligere dokumenter"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Manualsider"
-
-#~ msgid "Info Pages"
-#~ msgstr "Infosider"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manualsider"
-
-#~ msgid "GNOME is"
-#~ msgstr "Gnome er"
-
-#~ msgid "Free Software"
-#~ msgstr "frit programmel"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#~ msgid "Loading&nbsp;&nbsp;&nbsp;"
-#~ msgstr "Indlæser&nbsp;&nbsp;&nbsp;"
-
-#~ msgid "Loading.&nbsp;&nbsp;"
-#~ msgstr "Indlæser.&nbsp;&nbsp;"
-
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Indlæser..&nbsp;"
-
-#~ msgid "Previous"
-#~ msgstr "Forrige"
-
 #~ msgid "Next"
 #~ msgstr "Næste"
 
@@ -719,29 +697,11 @@ msgstr "Hjælp"
 #~ "Fejl ved fortolkning af stilarket, sikr dig at Docbook-miljøopsætningen "
 #~ "er korrekt."
 
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Kunne ikke fortolke dokumentet '%s'."
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Fejl ved anvendelse af stilarket."
-
-#~ msgid "Failed to open document '%s'"
-#~ msgstr "Det mislykkedes at åbne dokumentet '%s'"
-
-#~ msgid "info"
-#~ msgstr "info"
-
-#~ msgid "man"
-#~ msgstr "man"
-
 #~ msgid "Installed documents"
 #~ msgstr "Installerede dokumenter"
 
 #~ msgid "Start page"
 #~ msgstr "Startside"
-
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Scrollkeeperdokumenter for kategori"
 
 #~ msgid "Search for a phrase in the document"
 #~ msgstr "Søg efter ord i dokumentet"
@@ -751,6 +711,3 @@ msgstr "Hjælp"
 
 #~ msgid "Overview of contents"
 #~ msgstr "Indholdsfortegnelse"
-
-#~ msgid "Manual pages for section"
-#~ msgstr "Manualsider i sektion"
