Updated Irish translation

--- a/po/ga.po
+++ b/po/ga.po
@@ -1,5 +1,5 @@
 # Irish translation of yelp.
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Copyright (C) 2003,2004 Free Software Foundation, Inc.
 # Paul Duffy <dubhthach@frink.nuigalway.ie>, 2003.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2004-01-12 18:01-0600\n"
 "PO-Revision-Date: 2003-05-01 18:50+0100\n"
 "Last-Translator: Paul Duffy <dubhthach@frink.nuigalway.ie>\n"
-"Language-Team: Irish\n"
+"Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,9 +23,8 @@ msgid "Applications"
 msgstr ""
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Deasc"
+msgstr "Deasc"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
@@ -56,7 +55,7 @@ msgstr ""
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Gineréal"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
@@ -68,7 +67,8 @@ msgstr ""
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
+
 
 #: data/toc.xml.in.h:14
 msgid "Kernels"
@@ -92,7 +92,7 @@ msgstr ""
 
 #: data/toc.xml.in.h:19
 msgid "System"
-msgstr ""
+msgstr "Corás"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
@@ -112,11 +112,11 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Cuardaigh"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Cuardaigh: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -151,9 +151,8 @@ msgid "Titlepage"
 msgstr ""
 
 #: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
-#, fuzzy
 msgid "Contents"
-msgstr "ábhar Cabhair"
+msgstr ""
 
 #: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
 msgid "Unknown"
