--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-02-04  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.5.4
+
+	* README:
+	- Updated README information regarding XSLT.
+
+	* po/*.po:
+	- Various distcheck changes.
+
 2004-02-03  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
