--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Tomasz K³oczko <kloczek@pld.org.pl>
+
+	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS)
+	  and AC_SUBST(LDFLAGS). This variables are substed by default.
+
 2004-02-04  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
