--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2004-02-05  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
