2004-02-07 Fixed translator_credit in ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ja.po
+++ b/po/ja.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-07 00:58+0900\n"
-"PO-Revision-Date: 2004-02-07 00:58+0900\n"
+"POT-Creation-Date: 2004-02-07 01:06+0900\n"
+"PO-Revision-Date: 2004-02-07 01:05+0900\n"
 "Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -386,8 +386,9 @@ msgstr "読み込み中..."
 #: src/yelp-window.c:1290
 msgid "translator_credits"
 msgstr ""
-"Takeshi AIHANA <aihana@gnome.gr.jp>\n"
-"KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>"
+"相花 毅 <aihana@gnome.gr.jp>\n"
+"KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>\n"
+"日本GNOMEユーザー会 <http://www.gnome.gr.jp>"
 
 #: src/yelp-window.c:1295
 msgid "A Help Browser for GNOME"
