- Handle releaseinfo element.
* stylesheets/db2html-titlepage.xsl:
* stylesheets/l10n.xml.in:
- Handle releaseinfo element.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-07  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-titlepage.xsl:
+	* stylesheets/l10n.xml.in:
+	- Handle releaseinfo element.
+
 2004-02-06  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
