--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-02-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-html-gtkhtml2.c:
+	* src/yelp-window.c:
+	- Don't always grab focus on the gtkhtml2 widget.  I did this as part of
+	  my efforts to lay smack-down on gtkhtml2's scrolling weirdness, but it
+	  isn't needed with the solution I have, and it's annoying.
+
+	* stylesheets/db2html-html.xsl:
+	* stylesheets/db2html-toc.xsl:
+	- Stylistic TOC changes, and only print Contents header when there are.
+
+	* test/testdoc1/testdoc1.xml:
+	- Chunk two levels deep.
+
 2004-02-07  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-titlepage.xsl:
