- Rather smallish speed improvement.
* stylesheets/db2html-toc.xsl:
- Rather smallish speed improvement.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-08  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/db2html-toc.xsl:
+	- Rather smallish speed improvement.
+
+2004-02-08  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-html-gtkhtml2.c:
 	* src/yelp-window.c:
 	- Don't always grab focus on the gtkhtml2 widget.  I did this as part of
