- Speed improvements of about 0.1s on the UG.
* stylesheets/db2html-header.xsl:
- Speed improvements of about 0.1s on the UG.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-09  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-header.xsl:
+	- Speed improvements of about 0.1s on the UG.
+
 2004-02-08  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-toc.xsl:
