- Fixed theoretical bug which never gets triggered in navbar.next.
* stylesheets/db2html-navbar.xsl:
- Fixed theoretical bug which never gets triggered in navbar.next.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-09  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/db2html-navbar.xsl:
+	- Fixed theoretical bug which never gets triggered in navbar.next.
+
+2004-02-09  Shaun McCance  <shaunm@gnome.org>
+
 	* stylesheets/db2html-header.xsl:
 	- Speed improvements of about 0.1s on the UG.
 
