--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-10  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.5.5
+
+	* po/*.po
+	- distcheck stuff
+
 2004-02-09  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-navbar.xsl:
