--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,14 +2,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-09 04:42+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-10 03:17-0600\n"
 "PO-Revision-Date: 2004-01-15 11:14+0800\n"
 "Last-Translator: 周延潮 <75jan@163.com>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -660,4 +660,3 @@ msgstr "获得 GNOME 的帮助"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "帮助"
-
