--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-10  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-02-10  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
