- Some work on cmdsynopsis.
* stylesheets/db2html-header.xsl:
* stylesheets/db2html-synopsis.xsl:
- Some work on cmdsynopsis.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-10  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/db2html-header.xsl:
+	* stylesheets/db2html-synopsis.xsl:
+	- Some work on cmdsynopsis.
+
+2004-02-10  Shaun McCance  <shaunm@gnome.org>
+
 	* configure.in:
 	- Version 2.5.5
 
