2004-02-11 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ja.po
+++ b/po/ja.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2004-02-07 01:05+0900\n"
+"POT-Creation-Date: 2004-02-11 16:51+0900\n"
+"PO-Revision-Date: 2004-02-11 16:51+0900\n"
 "Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -396,19 +396,19 @@ msgstr "GNOME 向けのヘルプ・ブラウザ"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "‘"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "’"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8220;"
+msgstr "“"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "”"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
@@ -620,7 +620,7 @@ msgstr "リファレンスのセクション"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "リリース情報"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
