--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-11  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-synopsis.xsl:
+	* test/testdoc1/testdoc1.xml:
+	- More cmdsynopsis work.
+
 2004-02-10  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-header.xsl:
