Updated Serbian translation.

--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -1,5 +1,5 @@
 # Serbian translation of yelp
-# Courtesy of Prevod.org team (http://www.prevod.org/) -- 2003, 2004.
+# Courtesy of Prevod.org team (http://prevod.org/) -- 2003, 2004.
 #
 # This file is distributed under the same license as the yelp package.
 #
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2004-01-23 11:46+0100\n"
+"POT-Creation-Date: 2004-02-12 04:01+0100\n"
+"PO-Revision-Date: 2004-02-12 04:01+0100\n"
 "Last-Translator: Goran Rakić <gox@devbase.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -622,7 +622,7 @@ msgstr "Odeljak sa referencama"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Podaci o izdanju"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
