--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-12  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Don't crash when the window is closed before the transformation is
+	  finished, from Jan Arne Petersen.  (#134266)
+
 2004-02-11  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-synopsis.xsl:
