- Fix for #126345 from Padraig O'Briain.
* src/yelp-index-model.c:
- Fix for #126345 from Padraig O'Briain.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-13  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-index-model.c:
+	- Fix for #126345 from Padraig O'Briain.
+
 2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* stylesheets/yelp-custom.xsl:
