- Fixed memory leak.
* src/yelp-db-pager.c:
- Fixed memory leak.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-15  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Fixed memory leak.
+
 2004-02-12  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
