Updated Mongolian translation

--- a/po/mn.po
+++ b/po/mn.po
@@ -1,17 +1,19 @@
+# translation of mn.po to Mongolian
 # translation of yelp.HEAD.po to Mongolian
 # translation of yelp.HEAD.po to mongolian
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Sanlig Badral <badral@chinggis.com>, 2003.
 # Sanlig Badral <Badral@openmn.org>, 2003, 2004.
+# Sanlig Badral <badral@openmn.org>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD\n"
+"Project-Id-Version: mn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2004-02-04 02:34+0100\n"
-"Last-Translator: Sanlig Badral <Badral@openmn.org>\n"
+"PO-Revision-Date: 2004-02-20 21:29+0100\n"
+"Last-Translator: Sanlig Badral <badral@openmn.org>\n"
 "Language-Team: Mongolian <openmn-core@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -625,7 +627,7 @@ msgstr "Хамаарлын хэсэг"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Хэвлэлтийн мэдээлэл"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
@@ -673,3 +675,4 @@ msgstr "Тусламж"
 
 #~ msgid "The document '%s' does not exist"
 #~ msgstr "»%s« баримт алга байна"
+
