cy.po: Updated Welsh tranlslation from Rhys Jones.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-24  Dafydd Harries  <daf@muse.19inch.net>
+
+	* cy.po: Updated Welsh tranlslation from Rhys Jones.
+
 2004-02-23  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
