--- a/po/cy.po
+++ b/po/cy.po
@@ -1,115 +1,103 @@
-# GNOME yn Gymraeg.
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# yelp.po yn Gymraeg.
 # This file is distributed under the same license as the yelp package.
-# Chris Jackson <chris@www.linux.org.uk>, 2003
+# Chris Jackson <chris@www.linux.org.uk>, 2003.
+# Rhys Jones <rhys@sucs.org>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2003-08-14 21:33+0100\n"
-"Last-Translator: Dafydd Harries <daf@parnassus.ath.cx>\n"
+"POT-Creation-Date: 2004-02-24 01:05+0000\n"
+"PO-Revision-Date: 2004-02-24 01:04+0000\n"
+"Last-Translator: Rhys Jones <rhys@sucs.org>\n"
 "Language-Team: Welsh <gnome-cy@pengwyn.linux.org.uk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Rhaglenni"
+msgstr "Rhaglennigion"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Rhaglenni"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Penbwrdd"
+msgstr "Penbwrdd"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Datblygu"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Datblygu"
+msgstr "Amgylcheddau Datblygu"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Datblygu"
+msgstr "Offer Datblygu"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Golygu"
+msgstr "Golygyddion"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Rhaglenni"
+msgstr "Rhaglenni Addysg"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Gêmau a Difyrrwch"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Cyffredinol"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Cynnwys Help"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Rhaglenni"
+msgstr "Rhaglenni Rhyngrwyd"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Ffwythiannau'r Cnewyllyn"
+msgstr "Cnewyllynnau"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Rhaglenni"
+msgstr "Rhaglenni Amlgyfrwng"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Rhaglenni Swyddfa a Chynhyrchiant"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Rhaglenni"
+msgstr "Rhaglenni Gwyddonol"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Diogeliadau"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Galwadau System"
+msgstr "System"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Cyfleusterau"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Rhaglenni"
+msgstr "Rhaglenni X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,15 +105,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Yn ymateb i _gês"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Chwilio"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Chwilio: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,7 +125,7 @@ msgstr "_Blaenorol"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Amlapio"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -147,51 +135,48 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Ffatri Yelp"
 
+# Neu '...yn y yelp:document' efallai?
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Heb ddarganfod priodoledd href yn y ddogfen yelp:"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Dim cof ar ôl"
 
-#: src/yelp-db-pager.c:631 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Tudalen deitl"
 
-#: src/yelp-db-pager.c:633 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Cynnwys"
 
-#: src/yelp-db-pager.c:651 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Anhysbys"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dydy'r ddogfen '%s' ddim yn bodoli"
+msgstr "Methwyd agor y ddogfen ddewiswyd"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Dydy'r ddogfen '%s' ddim yn bodoli"
+msgstr "Ni ddarganfyddwyd yn y ddogfen hon y dudalen ddewiswyd."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dydy'r ddogfen '%s' ddim yn bodoli"
+msgstr "Methwyd a darllen y tabl cynnwys."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Ni gynhelir dogfennau SGML DocBook bellach."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Dydy'r ddogfen '%s' ddim yn bodoli"
+msgstr "Methwyd a darllen y ffeil ddewiswyd."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -204,7 +189,7 @@ msgstr "Methu rhedeg Yelp: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Methu agor ffenstr newydd."
+msgstr "Methu agor ffenestr newydd."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -239,9 +224,10 @@ msgstr "PThreads"
 msgid "System Calls"
 msgstr "Galwadau System"
 
+# 'llyfrgell' ddefnyddir yng ngweddill y cyfieithiadau GNOME, mae'n debyg
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Ffwythiannau'r Rhaglengell"
+msgstr "Ffwythiannau'r Llyfrgell"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
@@ -249,7 +235,7 @@ msgstr "Ffwythiannau'r Cnewyllyn"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Dyfeisiau Meddalwedd"
+msgstr "Dyfeisiau Caledwedd"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
@@ -268,22 +254,21 @@ msgid "System Administration"
 msgstr "Gweinyddiaeth System"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dogfennau"
+msgstr "URI'r Ddogfen"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI y ddogfen sydd i'w phrosesu"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Cyfrif seibiau yn negatif."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Methu rhedeg Yelp: '%s'"
+msgstr "Methwyd llwytho'r ffeil OMF '%s'."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -293,298 +278,278 @@ msgstr "Categorïau"
 msgid "Documents"
 msgstr "Dogfennau"
 
-#: src/yelp-window.c:248
+#: src/yelp-window.c:249
 msgid "/_File"
 msgstr "/_Ffeil"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:250
 msgid "/File/_New window"
 msgstr "/Ffeil/Ffenestr _newydd"
 
-#: src/yelp-window.c:252
+#: src/yelp-window.c:253
 msgid "/File/_Close window"
 msgstr "/Ffeil/_Cau ffenestr"
 
-#: src/yelp-window.c:256
+#: src/yelp-window.c:257
 msgid "/_Edit"
 msgstr "/_Golygu"
 
-#: src/yelp-window.c:257
-#, fuzzy
+#: src/yelp-window.c:258
 msgid "/Edit/_Find..."
-msgstr "/Golygu/_Chwilio mewn tudalen..."
+msgstr "/Golygu/Canfod..."
 
-#: src/yelp-window.c:260
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Edit/Find Ne_xt"
-msgstr "/Golygu/_Chwilio eto"
+msgstr "/Golygu/Canfod _Nesaf"
 
-#: src/yelp-window.c:263
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Edit/Find Pre_vious"
-msgstr "/Golygu/_Chwilio eto"
+msgstr "/Golygu/Canfod _Blaenorol"
 
-#: src/yelp-window.c:267
+#: src/yelp-window.c:268
 msgid "/_Go"
 msgstr "/_Mynd"
 
-#: src/yelp-window.c:268
+#: src/yelp-window.c:269
 msgid "/Go/_Back"
 msgstr "/Mynd/Yn _ôl"
 
-#: src/yelp-window.c:271
+#: src/yelp-window.c:272
 msgid "/Go/_Forward"
 msgstr "/Mynd/_Ymlaen"
 
-#: src/yelp-window.c:274
+#: src/yelp-window.c:275
 msgid "/Go/_Home"
 msgstr "/Mynd/_Adre"
 
-#: src/yelp-window.c:277
-#, fuzzy
-msgid "/Go/"
-msgstr "/_Mynd"
-
 #: src/yelp-window.c:278
-#, fuzzy
+msgid "/Go/"
+msgstr "/Mynd/"
+
+#: src/yelp-window.c:279
 msgid "/Go/_Previous Page"
-msgstr "_Blaenorol"
+msgstr "/Mynd/Tudalen _Flaenorol"
 
-#: src/yelp-window.c:281
-#, fuzzy
+#: src/yelp-window.c:282
 msgid "/Go/_Next Page"
-msgstr "/Mynd/_Mynegai"
+msgstr "/Mynd/Tudalen _Nesaf"
 
-#: src/yelp-window.c:284
-#, fuzzy
+#: src/yelp-window.c:285
 msgid "/Go/_Contents"
-msgstr "Cynnwys"
+msgstr "/Mynd/_Cynnwys"
 
-#: src/yelp-window.c:288
+#: src/yelp-window.c:289
 msgid "/_Help"
 msgstr "/_Cymorth"
 
-#: src/yelp-window.c:289
+#: src/yelp-window.c:290
 msgid "/Help/_About"
 msgstr "/Cymorth/_Ynghylch"
 
-#: src/yelp-window.c:351
+#: src/yelp-window.c:352
 msgid "Help Browser"
 msgstr "Porwr Cymorth"
 
-#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:61
+#: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
 msgstr "Adran"
 
-#: src/yelp-window.c:624
+#: src/yelp-window.c:625
 msgid "Back"
 msgstr "Yn ôl"
 
-#: src/yelp-window.c:625
+#: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "Dangos y dudalen blaenorol"
+msgstr "Dangos y dudalen flaenorol yn yr hanes"
 
-#: src/yelp-window.c:635
+#: src/yelp-window.c:636
 msgid "Forward"
 msgstr "Ymlaen"
 
-#: src/yelp-window.c:636
+#: src/yelp-window.c:637
 msgid "Show next page in history"
-msgstr "Dangos y tudalen nesaf"
+msgstr "Dangos y dudalen nesaf"
 
-#: src/yelp-window.c:648
+#: src/yelp-window.c:649
 msgid "Home"
 msgstr "Cartref"
 
-#: src/yelp-window.c:649
+#: src/yelp-window.c:650
 msgid "Go to home view"
-msgstr "Ewch i'r olygfa gartref"
+msgstr "Ewch i'r olygfa cartref"
 
-#: src/yelp-window.c:859
+#: src/yelp-window.c:860
 msgid "Loading..."
 msgstr "Yn Llwytho..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1290
+#: src/yelp-window.c:1300
 msgid "translator_credits"
 msgstr ""
-"Chris M. Jackson <chris@www.linux.org.uk>, Dafydd Harries <daf@parnassus.ath."
-"cx>"
+"Chris M. Jackson <chris@www.linux.org.uk>\n"
+"Dafydd Harries <daf@parnassus.ath.cx>\n"
+"Rhys Jones <rhys@sucs.org>"
 
-#: src/yelp-window.c:1295
+#: src/yelp-window.c:1305
 msgid "A Help Browser for GNOME"
 msgstr "Porwr Cymorth ar gyfer GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch yr Erthygl Hon"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Ynghylch y Llyfryddiaeth Hon"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Book"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Llyfr Hwn"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Chapter"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Bennod Hon"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Entry"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Gofnod Hwn"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Glossary"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch yr Eirfa Hon"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Index"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Mynegai Hwn"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Part"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Rhan Hon"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Preface"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Rhagymadrodd Hwn"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Reference"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Cyfeiriad Hwn"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Section"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch yr Adran Hon"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "About This Set"
-msgstr "Ynghylch y Ddogfen Hwn"
+msgstr "Ynghylch y Set Hon"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Rhaglenni"
+msgstr "Mabwysiad"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Atodiad"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Erthygl"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Cynulleidfa"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Awdur"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Awduron"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Llyfryddiaeth"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Llyfr"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Rhybudd"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Pennod"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Cydweithiwr"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Cydweithwyr"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Coloffon"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Hawlfraint"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Hawlfreintiau"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Dyddiad"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Adran"
+msgstr "Cyflwyniad"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Golygu"
+msgstr "Golygydd"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Ebost"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Esiampl"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Ffigur"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Geirfa"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Pwysig"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -592,109 +557,110 @@ msgstr "Mynegai"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Rhybudd Cyfreithiol"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Lefel"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Cynulleidfa Neges"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Lefel Neges"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Gwraidd Neges"
 
+# Neu 'sylwer'? Mae'n dibynnu ar y cyd-destun...
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Nodyn"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Gwraidd"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Cyfrannwr Arall"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Cyfranwyr Eraill"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Rhan"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Rhagymadrodd"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Cyhoeddwr"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Cyhoeddwyr"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Cyfeiriad"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Cofnod Cyfeiriad"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Adran Gyfeiriad"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Gwybodaeth Rhyddhau"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Hanes Adolygiadau"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Gweler"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Gweler Hefyd"
 
+# Rwy'n tybio mai ystyr 'Set Index' yw 'Set an Index' yn hytrach na
+# 'The Index of the Set'
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Mynegai"
+msgstr "Gosod Mynegai"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tabl"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Cynnwys Help"
+msgstr "Tabl Cynnwys"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Cyngor"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Teitl"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Rhybudd"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
